colord (0.1.15-2) UNRELEASED; urgency=low

  * debian/control:
    + Move gir package to Section: introspection

 -- Christopher James Halse Rogers <raof@ubuntu.com>  Wed, 14 Dec 2011 22:01:40 +1100

colord (0.1.15-1) unstable; urgency=low

  * New upstream release.
    + Fixes sqlite injection vulnerability, preventing malicious applications
      from corrupting colord's database (Closes: #650021).
  * debian/patches/01_use_polkit_owner_annotation.patch:
    + Cherry-pick from upstream, enabling use of the PolicyKit "owner"
      annotation.
  * debian/control:
    + Add versioned Build-Depends on libpolkit-gobject-1-dev to ensure
      configure detects a new enough PolicyKit to enable the "owner"
      annotation.
    + Add versioned Depends on policykit-1 to colord to ensure a new enough
      PolicyKit to understand the "owner" annotation at runtime.
  * debian/rules:
    + Re-enable PolicyKit support now that the "owner" annotation is supported.
  * debian/patches/06_use_dbus_security_for_permissions.diff:
    + Drop; PolicyKit has been fixed.
  * debian/libcolord1.symbols: Add new symbols in 0.1.14 and 0.1.15

 -- Christopher James Halse Rogers <raof@ubuntu.com>  Wed, 14 Dec 2011 15:25:41 +1100

colord (0.1.13-1) unstable; urgency=low

  [ Christopher James Halse Rogers ]
  * New upstream release. (Closes: #643724)
  * Update libcolord1 symbols for new upstream.
  * debian/colord.postinst:
  * debian/rules:
    + Run colord daemon as a system user, rather than root.  It only needs
      write access to /var/lib/colord and access to scanner devices, which
      is handled by udev.
  * debian/rules:
  * debian/patches/07_fix_disable_polkit_build.diff:
  * debian/patches/06_use_dbus_security_for_permissions.diff:
    + Use DBus' at_console context to regulate access to the colord daemon.
      PolicyKit doesn't allow non-root processes to query whether a different
      a user is authorised to perform an action.  DBus' at_console context