@@ -1,8 +1,7 @@
 debian/tmp/etc/
 lib/udev/rules.d/
 usr/bin/
-usr/lib/*/colord
-usr/lib/*/colord-sensors
+usr/lib/*/colord*
 usr/share/color
 usr/share/dbus-1
 usr/share/locale
