@@ -7,12 +7,13 @@ Build-Depends:
  intltool,
  libglib2.0-dev,
  liblcms2-dev,
- libgudev-1.0-dev,
+ libgudev-1.0-dev [linux-any],
  libsqlite3-dev,
  docbook-utils,
- libusb-1.0-0-dev,
+ libusb-1.0-0-dev [linux-any],
+ libusb2-dev [kfreebsd-any],
  libpolkit-gobject-1-dev (>= 0.103),
- libsane-dev,
+ libsane-dev [linux-any],
  valac,
  gobject-introspection,
  libgirepository1.0-dev,
